# llvm-p2

./: .gitignore  CMakeLists.txt  Grammar.txt  PietraLang.cpp  PietraLang.h  Todos.txt
Plang/: syntax_rules.md
Plang/examples/: example.pi
Plang/examples/std/: file.pi  math.pi  memory.pi  new.pi  socket.pi  stdio.pi  string.pi
Plang/header/: decl.hpp  expr.hpp  lexer.hpp  module.hpp  packageManager.hpp  scope.hpp  srcLocation.hpp  stmt.hpp  sym.hpp  type.hpp  typespec.hpp
Plang/src/: common.cpp
Plang/src/ast/: decl.cpp  declPrinter.cpp  expr.cpp  exprPrinter.cpp  module.cpp  printerCommon.cpp  stmt.cpp  stmtPrinter.cpp  type.cpp  typespec.cpp  typespecPrinter.cpp
Plang/src/lexer/: lexer.cpp
Plang/src/llvm/: compilerLLVM.cpp  declCompiler.cpp  declarations.cpp  exprCompiler.cpp  scopes.cpp  stmtCompiler.cpp  sym.cpp  typeCompiler.cpp  utils.cpp
Plang/src/parser/: declParser.cpp  exprParser.cpp  moduleParser.cpp  parserCommon.cpp  stmtParser.cpp  typespecParser.cpp
